feat: add tenant control
