# pkg/model/passwd/oprator.go
@@ -1,12 +1,9 @@
 /*
 Copyright 2021 The tKeel Authors.
-
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
-
 	http://www.apache.org/licenses/LICENSE-2.0
-
 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -14,13 +11,27 @@ See the License for the specific language governing permissions and
 limitations under the License.
 */
 
-package token
+package passwd
 
 import (
-	"time"
+	"context"
+	"errors"
 )
 
-type Provider interface {
-	Token(sub, jti string, d time.Duration, m map[string]interface{}) (string, int64, error)
-	Parse(tokenStr string) (map[string]interface{}, bool, error)
+var (
+	ErrPasswordExsist          = errors.New("error Password existed")
+	ErrPasswordNotExsist       = errors.New("error Password not existed")
+	ErrPasswordVersionMismatch = errors.New("error Password version mismatch")
+)
+
+// Operator contains all operations to Password.
+type Operator interface {
+	// Create Password.
+	Create(context.Context, string) error
+	// Update Password.
+	Update(context.Context, string) error
+	// Get Password.
+	Get(ctx context.Context) (string, error)
+	// Delete Password.
+	Delete(ctx context.Context) error
 }
